@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $Id: monitor_procs,v 1.4 2002/05/23 07:28:53 urabe Exp $
+# $Id: monitor_procs,v 1.5 2008/02/20 02:31:25 urabe Exp $
 #
 # monitor_procs list : list ps output in _win
 # monitor_procs kill : kill all procs in _win
@@ -18,7 +18,7 @@ then
 fi
 tmp=$TD/monitor_procs.$$
 ps agxww|sed 's/ (.*)$//'> $tmp
-cat _win|grep -v '^#'|grep -v '^nice'|sed -n 's/ *&//p'|expand|tr -s " "|
+cat _win|grep -v '^#'|grep -v '^nice'|sed -n 's/ *&.*$//p'|expand|tr -s " "|
 while read procs
 do
   if [ "$1" = list ]
